2016-01-25 Roman
- SYS.{configure.ac,ChangeLog}: Some messages fix.
- DAQ.JavaLikeCalc: Operation "||" and "&&" formal set to equal priority.
- DAQ.OPC_UA: Module for client renamed to "Client OPC-UA" and for server to "Server OPC-UA".
    Protocol: reqData() fixed for "NodeClass" processing of the "Browse" request, motly for forward request to the data model.


2016-01-08 Roman
- FIX:DB.LibsDB.OscadaLibs.db: regEl.pidUnifD: Pulse regulation by the back position fixed and tested into real environment.
- FIX:DAQ.MMS.libMMS: oN() function fix for auto size adjust. Tail wait fix into the messIO() request.
- FIX:DAQ.ModBus: Some original messages fix. Some resources lock appended and moved from pthread_mutex_t to ResMtx.
- !!!!:DAQ.Siemens: Self implementing for ISO-TCP is added and tested, mostly by Proviron Holding NV request.
    Restoring timeout is added. Significant refactoring for the resources lock, error messages and other.


2015-12-17 Roman
- DB.LibsDB.OscadaLibs.db: Some descriptions expanded and fixed.
- DB.LibsDB.vcaBase.db: Main.TextLab: Context command's description into the operator's protocol fix.
- !:FIX:DAQ.ICP_DAS: Possible crash fix into the OpenSCADA serial transport mode using and CRC enable on short (not full) messages receive and process.
- Special.FLibComplex1: Some the source code cleaned.
- !!:FIX:UI.VCAEngine: Queued notification's quittance for all and partial fix.


2015-12-12 Roman
- !!!!:DB.LibsDB.OscadaLibs.db: User protocol for IEC-60870-104 is added, by the template only.
- !!:DAQ.SMH2Gi: Version 1.0.0 released.


2015-12-11 Roman
- !!:FIX:DAQ.OPC_UA.libOPC_UA: Specific value types OpcUa_IntAuto and OpcUa_UIntAuto added for adaptive integer type selection,
	mostly for provide integer into not fixed int64.
    Error OpcUa_BadNoSubscription added to PublishRequest.
    Server folder "ServerCapabilities" added and some items here.