@@ -1,7 +1,7 @@
 
 //OpenSCADA system module UI.VCAEngine file: libwidg.h
 /***************************************************************************
- *   Copyright (C) 2006-2015 by Roman Savochenko, <rom_as@oscada.org>      *
+ *   Copyright (C) 2006-2016 by Roman Savochenko, <rom_as@oscada.org>      *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -154,7 +154,7 @@ class LWidget : public Widget, public TConfig
 	WidgetLib &ownerLib( );
 
 	bool	enableByNeed;	//Load and enable by need
-	pthread_mutex_t &funcM( )	{ return mFuncM; }
+	ResMtx &funcM( )	{ return mFuncM; }
 
     protected:
 	//Methods
@@ -174,7 +174,7 @@ class LWidget : public Widget, public TConfig
 	int64_t	&mProcPer,	//Widget period
 		&mTimeStamp;
 	string	mParentNmPrev;	//Previous parent name after successful enable
-	pthread_mutex_t	mFuncM;
+	ResMtx	mFuncM;
 };
 
 //************************************************
